# lama_inpaint_android

./: .gitignore  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cpponnxrunner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  InferenceRunner.cpp  InferenceRunner.h  ModelSession.cpp  ModelSession.h  config.h  inference.cpp  inference.h  logging.h  native-lib.cpp  session_cache.h  utils.cpp  utils.h
app/src/main/java/com/example/cpponnxrunner/: GlInfo.kt  ImageProcessingUtil.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cpponnxrunner/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
